# text2excel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-package.yml
csv2xlsx/: __init__.py  cli.py  convert.py  csv2xlsx.py
tests/: fmt_test.py  test_csv2xlsx.py  test_fmt.py  test_text2excel.py  text2excel_test.py
text2excel/: __init__.py  cli.py  convert.py  fmt.py
