[tool.poetry]
name = "text2excel"
version = "0.4.2"
description = "Converts to Excel XLSX from a TSV or CSV text file."
license = "MIT"
authors = ["Fredrik Mellström <11281108+harkabeeparolus@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/harkabeeparolus/text2excel"
keywords = ["csv", "tsv", "excel", "xlsx"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
openpyxl = "^3.0.4"
importlib-metadata = { version = "^1", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.5.3"
mypy = "^0.812"
openpyxl-stubs = "^0.1.19"
isort = "^5.8.0"

[tool.poetry.scripts]
text2excel = 'text2excel.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py36']

[tool.isort]
profile = "black"
force_single_line = true
