[project]
name = "text2excel"
version = "0.4.4"
description = "Converts to Excel XLSX from a TSV or CSV text file."
readme = "README.md"
license = "MIT"
authors = [
  {name = "Fredrik Mellström", email = "11281108+harkabeeparolus@users.noreply.github.com"},
]
keywords = ["csv", "tsv", "excel", "xlsx"]
classifiers = [
  "Intended Audience :: Information Technology",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.0.9,<4",
]

[project.urls]
Homepage = "https://github.com/harkabeeparolus/text2excel"

[project.scripts]
text2excel = "text2excel.cli:main"

[dependency-groups]
dev = [
  "openpyxl-stubs>=0.1.21",
  "pytest>=9.0.3",
  "mypy (>=1.20.1,<2.0.0)",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0"]
